# cloudboss-docs

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
cloudboss_docs/theme/: main.html  mkdocs_theme.yml
tests/: test_theme.py
unobin/: go.mod  go.sum
unobin/cmd/docgen/: main.go
unobin/internal/docgen/: comments.go  generate.go  generate_test.go  render.go
